--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ bleach==6.1.0
 certifi==2024.7.4
 cffi==1.16.0
 charset-normalizer==3.3.2
+chex==0.1.86
 click==8.1.7
 comm==0.2.2
 contourpy==1.2.1
@@ -26,26 +27,31 @@ debugpy==1.8.2
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.8
+etils==1.9.2
 executing==2.0.1
 fastjsonschema==2.20.0
 filelock==3.15.4
 flatbuffers==24.3.25
+flax==0.8.5
 fonttools==4.53.1
 fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2024.5.0
 gast==0.6.0
 google-pasta==0.2.0
-grpcio==1.64.1
+grpcio==1.65.1
 h11==0.14.0
 h5py==3.11.0
 httpcore==1.0.5
 httpx==0.27.0
-huggingface-hub==0.23.4
+huggingface-hub==0.24.0
 idna==3.7
+importlib_resources==6.4.0
 ipykernel==6.29.5
 ipython==8.26.0
 isoduration==20.11.0
+jax==0.4.30
+jaxlib==0.4.30
 jedi==0.19.1
 Jinja2==3.1.4
 json5==0.9.25
@@ -58,9 +64,9 @@ jupyter_client==8.6.2
 jupyter_core==5.7.2
 jupyter_server==2.14.2
 jupyter_server_terminals==0.5.3
-jupyterlab==4.2.3
+jupyterlab==4.2.4
 jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.2
+jupyterlab_server==2.27.3
 keras==3.4.1
 kiwisolver==1.4.5
 libclang==18.1.1
@@ -73,6 +79,7 @@ mdurl==0.1.2
 mistune==3.0.2
 ml-dtypes==0.4.0
 mpmath==1.3.0
+msgpack==1.0.8
 multidict==6.0.5
 multiprocess==0.70.16
 mypy-extensions==1.0.0
@@ -87,7 +94,9 @@ notebook==7.2.1
 notebook_shim==0.2.4
 numpy==1.26.4
 opt-einsum==3.3.0
+optax==0.2.3
 optree==0.12.1
+orbax-checkpoint==0.5.22
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.2
@@ -102,8 +111,8 @@ prompt_toolkit==3.0.47
 protobuf==4.25.3
 psutil==6.0.0
 ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==16.1.0
+pure_eval==0.2.3
+pyarrow==17.0.0
 pyarrow-hotfix==0.6
 pycparser==2.22
 Pygments==2.18.0
@@ -121,24 +130,27 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.7.1
 rpds-py==0.19.0
-ruff==0.5.2
+ruff==0.5.4
 safetensors==0.4.3
+scipy==1.14.0
 Send2Trash==1.8.3
+setuptools==71.1.0
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
-sympy==1.13.0
+sympy==1.13.1
 tensorboard==2.17.0
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
-tensorflow-io-gcs-filesystem==0.37.1
+tensorstore==0.1.63
 termcolor==2.4.0
 terminado==0.18.1
 tiktoken==0.7.0
 tinycss2==1.3.0
 tokenize-rt==5.2.0
 tokenizers==0.19.1
+toolz==0.12.1
 torch==2.3.1
 tornado==6.4.1
 tqdm==4.66.4
@@ -154,6 +166,8 @@ webcolors==24.6.0
 webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.0.3
+wheel==0.43.0
 wrapt==1.16.0
 xxhash==3.4.1
 yarl==1.9.4
+zipp==3.19.2
