--- a/.ruff.toml
+++ b/.ruff.toml
@@ -3,3 +3,6 @@ extend-include = ["*.ipynb"]
 
 [lint]
 select = ["E", "F", "I", "PLC", "PLE", "UP"]
+
+[lint.extend-per-file-ignores]
+"*.ipynb" = ["PLE1142"]
