--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==2.1.0
-aiohttp==3.9.5
+aiohappyeyeballs==2.3.5
+aiohttp==3.10.2
 aiosignal==1.3.1
 anyio==4.4.0
 appnope==0.1.4
@@ -9,21 +10,19 @@ arrow==1.3.0
 asttokens==2.4.1
 astunparse==1.6.3
 async-lru==2.0.4
-attrs==23.2.0
-Babel==2.15.0
+attrs==24.2.0
+babel==2.16.0
 beautifulsoup4==4.12.3
-black==24.4.2
 bleach==6.1.0
 certifi==2024.7.4
-cffi==1.16.0
+cffi==1.17.0
 charset-normalizer==3.3.2
 chex==0.1.86
-click==8.1.7
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
 datasets==2.20.0
-debugpy==1.8.2
+debugpy==1.8.5
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.8
@@ -39,19 +38,19 @@ frozenlist==1.4.1
 fsspec==2024.5.0
 gast==0.6.0
 google-pasta==0.2.0
-grpcio==1.65.1
+grpcio==1.65.4
 h11==0.14.0
 h5py==3.11.0
 httpcore==1.0.5
 httpx==0.27.0
-huggingface-hub==0.24.2
+huggingface-hub==0.24.5
 idna==3.7
 importlib_resources==6.4.0
 ipykernel==6.29.5
 ipython==8.26.0
 isoduration==20.11.0
-jax==0.4.30
-jaxlib==0.4.30
+jax==0.4.31
+jaxlib==0.4.31
 jedi==0.19.1
 Jinja2==3.1.4
 json5==0.9.25
@@ -73,7 +72,7 @@ libclang==18.1.1
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.9.1
+matplotlib==3.9.1.post1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.0.2
@@ -82,7 +81,6 @@ mpmath==1.3.0
 msgpack==1.0.8
 multidict==6.0.5
 multiprocess==0.70.16
-mypy-extensions==1.0.0
 namex==0.0.8
 nbclient==0.10.0
 nbconvert==7.16.4
@@ -96,19 +94,18 @@ numpy==1.26.4
 opt-einsum==3.3.0
 optax==0.2.3
 optree==0.12.1
-orbax-checkpoint==0.5.22
+orbax-checkpoint==0.5.23
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.2
 pandocfilters==1.5.1
 parso==0.8.4
-pathspec==0.12.1
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.2.2
 prometheus_client==0.20.0
 prompt_toolkit==3.0.47
-protobuf==4.25.3
+protobuf==4.25.4
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -117,21 +114,21 @@ pyarrow-hotfix==0.6
 pycparser==2.22
 Pygments==2.18.0
 pyparsing==3.1.2
-pyright==1.1.373
+pyright==1.1.375
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.1
-PyYAML==6.0.1
-pyzmq==26.0.3
+PyYAML==6.0.2
+pyzmq==26.1.0
 referencing==0.35.1
-regex==2024.5.15
+regex==2024.7.24
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.7.1
-rpds-py==0.19.1
-ruff==0.5.4
-safetensors==0.4.3
+rpds-py==0.20.0
+ruff==0.5.7
+safetensors==0.4.4
 scipy==1.14.0
 Send2Trash==1.8.3
 six==1.16.0
@@ -143,19 +140,18 @@ tensorboard==2.17.0
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
 tensorflow-io-gcs-filesystem==0.37.1
-tensorstore==0.1.63
+tensorstore==0.1.64
 termcolor==2.4.0
 terminado==0.18.1
 tiktoken==0.7.0
 tinycss2==1.3.0
-tokenize-rt==5.2.0
 tokenizers==0.19.1
 toolz==0.12.1
 torch==2.4.0
 tornado==6.4.1
-tqdm==4.66.4
+tqdm==4.66.5
 traitlets==5.14.3
-transformers==4.43.2
+transformers==4.44.0
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.12.2
 tzdata==2024.1
